onesgo-deployment.arm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onesgo-deployment
spec:
  selector:
    matchLabels:
      app: onesgo
  replicas: 1
  template:
    metadata:
      labels:
        app: onesgo
    spec:
      containers:
      - name: onesgo
        image: ghcr.io/lingkaix/onesgo:latest-arm64
        ports:
        - containerPort: 8080
