onesgo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onesgo-service
spec:
  selector:
    app: onesgo
  ports:
  - name: http
    port: 8080
    targetPort: 8080
