onesgo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onesgo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
  - hosts:
    - onesgo.simonxu.net
    secretName: onesgo-ingress-tls
  rules:
  - host: onesgo.simonxu.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: onesgo-service
            port:
              name: http
